<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- pregunta 1 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textViewPreguntaUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/primera"
            android:textColor="@color/green"
            android:textSize="@dimen/question"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/grupoPrimera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <RadioButton
                android:id="@+id/primeraOpcionUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primera_op_uno" />

            <RadioButton
                android:id="@+id/primeraOpcionDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primera_op_dos" />

            <RadioButton
                android:id="@+id/PrimeraOpcionTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primera_op_tres" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- pregunta 2 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/textViewPreguntaDos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/segunda"
            android:textColor="@color/purple"
            android:textSize="@dimen/question"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/grupoSegunda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/segundaOpcionUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda_op_uno" />

            <RadioButton
                android:id="@+id/segundaOpcionDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda_op_dos" />

            <RadioButton
                android:id="@+id/segundaOpcionTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda_op_tres" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- pregunta 3 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tercera"
            android:textColor="@color/pink"

            android:textSize="@dimen/question"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/grupoTercera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" >

            <RadioButton
                android:id="@+id/terceraOpcionUno"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tercera_op_uno" />
            <RadioButton
                android:id="@+id/terceraOpcionDos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tercera_op_dos" />
            <RadioButton
                android:id="@+id/terceraOpcionTres"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tercera_op_tres" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>